# Vindium-Server

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
client/: VindiumUnityClient.unitypackage
src/: client.rs  config.rs  main.rs  packet_manager.rs  read.rs  types.rs
src/ai/: mod.rs  processor.rs  processor_controller.rs
src/ai/behaviours/: mod.rs  passive_ground.rs
src/networking/: client.rs  helper.rs  mod.rs  read.rs  types.rs
src/networking/packets/: data_types.rs  mod.rs  packet_reader.rs
src/packets/: data_types.rs  mod.rs  packet.rs  packet_handler.rs  packet_manager.rs
