[package]
name = "respark_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rand = "0.8.5"